Changed sockets names, updated CMakeLists.txt, added 2 files for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,24 +7,24 @@ set(CMAKE_PREFIX_PATH "/usr/local/lib/cmake" ${CMAKE_PREFIX_PATH})
 find_package(nlohmann_json REQUIRED)
 find_package(spdlog REQUIRED)
 
-set(GLOABL_SOURCES 
+set(GLOBAL_SOURCES 
     src/socket.cpp
     src/connector.cpp
     src/config_loader.cpp
 )
 
 set(RECV_SOURCES 
-    src/server_socket.cpp
-    ${GLOABL_SOURCES}
+    src/recv_socket.cpp
+    ${GLOBAL_SOURCES}
 )
 
 set(SEND_SOURCES 
-    src/client_socket.cpp
-    ${GLOABL_SOURCES}
+    src/send_socket.cpp
+    ${GLOBAL_SOURCES}
 )
 
 add_library(connector_recv STATIC ${RECV_SOURCES})
-target_compile_definitions(connector_recv PRIVATE RECV)
+target_compile_definitions(connector_recv PUBLIC RECV)
 target_include_directories(connector_recv PUBLIC include)
 target_link_libraries(connector_recv 
     PRIVATE 
@@ -33,10 +33,22 @@ target_link_libraries(connector_recv
 )
 
 add_library(connector_send STATIC ${SEND_SOURCES})
-target_compile_definitions(connector_send PRIVATE SEND)
+target_compile_definitions(connector_send PUBLIC SEND)
 target_include_directories(connector_send PUBLIC include)
 target_link_libraries(connector_send 
     PRIVATE 
         nlohmann_json::nlohmann_json 
         spdlog::spdlog
+)
+
+add_executable(exm1 example1.cpp)
+target_link_libraries(exm1 
+    PRIVATE 
+        connector_send
+)
+
+add_executable(exm2 example2.cpp)
+target_link_libraries(exm2 
+    PRIVATE 
+        connector_recv
 )
